[package]
name = "spl-stake-pool"
version = "2.0.3"
description = "Solana Program Library Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.9"
borsh = "1.5.7"
bytemuck = "1.24"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.4"
serde = "1.0.219"
serde_derive = "1.0.103"
solana-program = "3.0.0"
solana-security-txt = "1.1.1"
solana-stake-interface = { version = "2", features = ["bincode"] }
solana-system-interface = { version = "3", features = ["bincode"] }
spl-pod = { version = "0.7.1", features = [
  "borsh",
] }
spl-token-2022-interface = "2.1.0"
thiserror = "2.0"
bincode = "1.3.1"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.7"
solana-program-test = "3.1.0"
solana-sdk = "3.0.0"
solana-vote-interface = "3.0.0"
spl-token-interface = "2.0.0"
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
